fix: Prevent `messageBox` from overflowing out of viewport.

--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -100,6 +100,7 @@ pre{
     padding: $padding-small;
     margin: $margin-small;
     width: max-content;
+    max-width: calc(100% - $margin-small);
     height: max-content;
 }
 
